# Eidetic

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  launcher.sh  lefthook.yml
.github/: PULL_REQUEST_TEMPLATE.md
crates/bevy_bible_graph/: Cargo.toml  README.md
crates/bevy_bible_graph/src/: README.md  category.rs  lib.rs  lib_tests.rs  native_graph_material.wgsl  native_render.rs  native_text_editor.rs  scene.rs  visual.rs  visual_3d.rs  wasm.rs  workspace.rs
crates/bevy_timeline/: Cargo.toml  README.md
crates/bevy_timeline/src/: README.md  app.rs  geometry.rs  hit_test.rs  lib.rs  native_command.rs  native_input.rs  native_render.rs  native_style.rs  native_visual.rs  native_window_control.rs  playhead.rs  relationship_curve.rs  scene.rs  tests.rs  viewport.rs  wasm.rs
crates/bevy_timeline/src/tests/: README.md  app.rs  app_command.rs  native_command.rs  native_lifecycle.rs  native_navigation.rs  native_visual.rs  split.rs
crates/core/: Cargo.toml
crates/core/src/: README.md  error.rs  lib.rs  reference.rs  template.rs
crates/core/src/ai/: README.md  backend.rs  consistency.rs  context.rs  helpers.rs  mod.rs  prompt.rs
crates/core/src/contracts/: README.md  affect.rs  agent_workflow.rs  ai_context.rs  bible_graph.rs  bible_graph_defaults.rs  bible_render_graph.rs  bible_render_graph_filter.rs  bible_render_graph_tests.rs  change_review.rs  context_influence.rs  graph_proposal.rs  mod.rs  propagation_proposal.rs  script_document.rs  selected_node_editor.rs  semantic_dependency.rs  semantic_proposal.rs  story_arc.rs  timeline_command.rs  timeline_render.rs
crates/core/src/project/: README.md  mod.rs
crates/core/src/script/: README.md  element.rs  format.rs  merge.rs  mod.rs
crates/core/src/story/: README.md  arc.rs  bible.rs  character.rs  mod.rs  progression.rs
crates/core/src/timeline/: README.md  clip.rs  mod.rs  node.rs  relationship.rs  scene.rs  structure.rs  timing.rs  track.rs
crates/server/: Cargo.toml
crates/server/python/: diffusion_engine.py
crates/server/src/: README.md  affect_service.rs  affect_store.rs  agent_graph_tools.rs  agent_premise_workflow.rs  agent_structured_tool_provider.rs  agent_workflow_harness.rs  agent_workflow_service.rs  agent_workflow_store.rs  ai_affect_context_prompt.rs  ai_bible_context_prompt.rs  ai_context_projection.rs  ai_context_projection_tests.rs  ai_generation_runtime.rs  ai_generation_service.rs  ai_service.rs  axum_runtime.rs  backend_error.rs  backend_task.rs  bible_graph_command.rs  bible_graph_command_tests.rs  bible_graph_edge_store.rs  bible_graph_field_store.rs  bible_graph_schema.rs  bible_graph_snapshot_store.rs  bible_graph_store.rs  bible_graph_store_render_tests.rs  bible_graph_store_tests.rs  bible_graph_value_store.rs  bible_render_graph_projection.rs  bible_render_graph_query.rs  change_review_projection.rs  change_review_projection_tests.rs  child_plan_projection_store.rs  child_plan_review.rs  child_plan_store.rs  child_plan_store_tests.rs  command_service.rs  command_service_bible.rs  command_service_semantic.rs  (+73 more)
crates/server/src/ai_backends/: README.md  llamacpp.rs  mod.rs  ollama.rs  openrouter.rs
crates/server/src/diffusion/: README.md  bridge.rs  manager.rs  mod.rs  tests.rs  types.rs
crates/server/src/routes/: README.md  ai.rs  ai_child_planning.rs  ai_config.rs  ai_context.rs  ai_context_tests.rs  ai_generation.rs  ai_generation_runtime.rs  ai_support.rs  commands.rs  commands_bible.rs  commands_bible_snapshot_tests.rs  commands_bible_tests.rs  commands_object_story_tests.rs  commands_script_tests.rs  commands_semantic.rs  commands_semantic_child_plan.rs  commands_semantic_child_plan_tests.rs  commands_semantic_propagation_tests.rs  commands_semantic_propagation_update_tests.rs  commands_semantic_tests.rs  commands_tests.rs  commands_timeline.rs  commands_timeline_children_tests.rs  commands_timeline_create_tests.rs  commands_timeline_delete_tests.rs  commands_timeline_range_tests.rs  commands_timeline_relationship_tests.rs  commands_timeline_split_tests.rs  commands_timeline_state_tests.rs  diffusion.rs  export.rs  mod.rs  models.rs  project.rs  projections.rs  projections_history_tests.rs  projections_semantic.rs  projections_semantic_tests.rs  projections_story_tests.rs  (+7 more)
docs/: README.md  dependency-governance.md
docs/adr/: README.md  (+2 more)
experiments/bevy-text-editor-018/: Cargo.toml  README.md
experiments/bevy-text-editor-018/src/: README.md  document.rs  fountain.rs  main.rs
plans/: architecture-blast-radius.md  story-bible-3d-graph-view.md  story-bible-worldbuilding.md  timeline-rendering-bevy.md
scripts/: check-decision-traceability.sh  check-dependencies.sh  prepare-pumas-dependency.sh
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: README.md  default.json
src-tauri/src/: README.md  ai_commands.rs  bevy_graph_host.rs  bevy_timeline_host.rs  bevy_timeline_host_tests.rs  bevy_timeline_owner.rs  desktop_events.rs  desktop_smoke.rs  embedded_viewport_host.rs  embedded_viewport_surface.rs  error.rs  export_commands.rs  graph_renderer_commands.rs  graph_renderer_projection.rs  health.rs  lib.rs  main.rs  model_commands.rs  project_commands.rs  reference_commands.rs  renderer_window.rs  timeline_renderer_command_bridge.rs  timeline_renderer_commands.rs  timeline_renderer_platform_strategy.rs  timeline_renderer_supervisor.rs  timeline_renderer_window_thread.rs  viewport_commands.rs
src-tauri/src/bevy_graph_host/: README.md  host.rs  mod.rs  native_runner.rs  owner.rs  platform_strategy.rs  supervisor.rs  tests.rs  window_strategy.rs  window_thread.rs
src-tauri/src/bevy_graph_host/platform_strategy/: README.md  current_platform.rs  mod.rs
src-tauri/src/commands/: README.md  affect.rs  bible.rs  context.rs  mod.rs  object_script_story.rs  semantic.rs  timeline.rs
src-tauri/src/projections/: README.md  affect.rs  bible.rs  context.rs  mod.rs  semantic.rs  story_script.rs  timeline.rs
ui/: .prettierrc.json  eslint.config.js  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
(+244 files in other folders)
