[workspace]
members = ["crates/core", "crates/server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
eidetic-core = { path = "crates/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
parking_lot = "0.12"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-stream = "0.1"
dirs = "6"
genpdf = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
yrs = { version = "0.25", features = ["sync"] }
pyo3 = { version = "0.23", features = ["auto-initialize"] }
pumas-library = { path = "../Pumas-Library/rust/crates/pumas-core" }
