[package]
name = "eidetic-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
eidetic-core.workspace = true
eidetic-server = { path = "../crates/server" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.11.2", features = [] }
tracing-subscriber.workspace = true

[[bin]]
name = "eidetic-desktop"
path = "src/main.rs"
