[package]
name = "eidetic-bevy-bible-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["std"] }
eidetic-core.workspace = true
serde.workspace = true
thiserror.workspace = true

[features]
default = []
native_render = [
    "bevy/2d_bevy_render",
    "bevy/bevy_window",
    "bevy/bevy_winit",
    "bevy/wayland",
    "bevy/x11",
]
