[package]
name = "eidetic-bevy-timeline"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = ["std"] }
eidetic-core.workspace = true
serde.workspace = true
thiserror.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = "0.6.5"
uuid.workspace = true
wasm-bindgen = "0.2.108"

[dev-dependencies]
uuid.workspace = true
