[package]
name = "eidetic-bevy-timeline"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["std"] }
eidetic-core.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
uuid.workspace = true
