[package]
name = "eidetic-core"
description = "Core library for Eidetic — timeline engine, data model, AI orchestration"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["v4", "serde", "js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
